# hello-ticket

./: .dockerignore  .gitignore  .project-summary.txt  DEBUGGING_GUIDE.md  Dockerfile  FRONTEND_PACKAGE_STRUCTURE.md  MODULE_STRUCTURE.md  README-PRODUCTION.md  README.md  SEAT_REFACTORING_SUMMARY.md  SHOW_EVENT_RELATIONSHIP.md  TICKET_SYSTEM_BRAINSTORM.md  check_db.py  debug_mediator.py  docker-compose.yml  start-postgres.sh  start.sh
backend/: .env  .gitignore  Dockerfile  README.md  env.example  env.session.example  manage_migrations.py  pyproject.toml  reproduce_issue.py  requirements.txt  test_token.py  test_user_cache.py  verify_erp_refactor.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_fresh.py  035_create_lookup_values_table.py  073046ccb44b_remove_payment_method_and_transaction_.py  0890508d4029_add.py  0a9027a34aba_add_shape_column_to_seats.py  11da7d7df158_add_soft_delete_to_tickets.py  1453227fa30b_add_venue_contact_address_description_.py  1774e7cf0d30_remove_customer_priority.py  19aee5ec801f_add_due_balance_to_bookings.py  2f1fba57ecca_add_shape_column_to_sections.py  32209b7224de_add.py  33e608eb1b98_add_event_seat_and_config_type.py  4f9eeb687a4e_change_payment_status_completed_to_paid.py  5992b9e928d5_initial_migration_create_all_tables.py  5e61f4379813_add_attachment_links_table.py  63a95d184528_add.py  68fad28b3dfd_add_payment_code_to_payments.py  f91c4df95d2a_add.py  (+24 more)
backend/app/: __init__.py  main.py  startup.py
backend/migrations/: 001_create_sessions_table.py  001_create_sessions_table.sql  002_rename_role_to_base_role.py  002_rename_role_to_base_role.sql  003_timestamp_with_timezone.py  003_timestamp_with_timezone.sql  004_recreate_role_tables_with_timezone.sql  005_split_name_to_first_last.py  005_split_name_to_first_last.sql  007_create_audit_logs_table.py  007_create_audit_logs_table.sql  008_add_user_activity_indexes.py  008_add_user_activity_indexes.sql  009_add_item_code.py  009_add_item_code.sql  010_create_sequences_table.py  010_create_sequences_table.sql  011_add_item_code_name_to_po_lines.py  011_add_item_code_name_to_po_lines.sql  012_add_customer_group_hierarchy_fields.py  013_rename_parent_customer_group_id_to_parent_id.py  014_create_putaway_locations_table.py  014_create_putaway_locations_table.sql  015_create_file_uploads_table.py  015_create_file_uploads_table.sql  016_change_layout_image_url_to_file_id.py  016_change_layout_image_url_to_file_id.sql  017_change_seat_section_to_section_id.py  017_change_seat_section_to_section_id.sql  018_add_design_mode_to_layouts.py  018_add_design_mode_to_layouts.sql  019_add_organizer_id_to_shows.py  019_add_organizer_id_to_shows.sql  020_add_show_date_fields.py  020_add_show_date_fields.sql  021_create_show_images_table.py  021_create_show_images_table.sql  022_remove_images_from_shows.py  022_remove_images_from_shows.sql  023_add_event_soft_delete_fields.py  (+23 more)
backend/scripts/: create_inventory_tracking_test_data.py  create_purchasing_seed_data.py  migrate_to_inventory_tracking.py  migrate_to_store_locations.py
backend/tests/: conftest.py
(+815 files in other folders)
